==============
Changelog
==============
2019-08-06 (version 1.7):
    * increased contrast for default map view text
    * improved detect of wavelength information, e.g. from Pleiades, Sentinel-2 and RapidEye data

2019-07-16 (version 1.6):
    * re-design of map visualization: faster and more compact, the number of maps is fixed to n dates x m map views
    * date, sensor or map view information can be plotted within each map and become available in screenshots
    * releases map layers that are not required any more
    * slider + buttons to navigate over time series
    * fixed preview in crosshair dialog

2019-07-07 (version 1.5):
    * closing the EO Time Series Viewer instance will release all of its resources
    * added "Lock Map Panel" to avoid unwanted resizing of central widget
    * fixed missing updates of time series tree view when adding / removing source images
    * map canvas context menu lists layers with spatial extent intersecting the cursor position only
    * fixes feature selection error
    * added quick label source image to label the path of raster layer

2019-07-02 (version 1.4):
    * adding vector layers with sublayers will add all sublayers
    * map canvas context menu "Focus on Spatial Extent" will hide maps without time series data for the current spatial extent
    * labeling dock allows to iterate over vector features. the spatial map extent will be centered to each feature (#26)
    * added several convenience function to TimeSeriesViewer object
    * fixed a bug that did not allow to create new polygon features
    * temporal profile visualization: fixed icons to preview selected plot style, coordinate described by "<fid> <name>", e.g. "42 Deforested", fixed plot style preview
    * updated SpectralLibraryViewer
    * fixed spelling error in stacked band input dialog
    * MapViews can add raster layers that have been opened in QGIS, e.g. XYZ Tile with OpenStreetMap data

2019-06-12 (version 1.3):