@@ -4,6 +4,8 @@ Changelog
 2019-08-06 (version 1.7):
     * increased contrast for default map view text
     * improved detect of wavelength information, e.g. from Pleiades, Sentinel-2 and RapidEye data
+    * temporal profile plot: data gaps are shown by breaks in a profile line
+    * fixed #102: move maps to date of interest selected in a temporal profile plot
 
 2019-07-16 (version 1.6):
     * re-design of map visualization: faster and more compact, the number of maps is fixed to n dates x m map views
